force-app/main/default/objects/Case/fields/Swarm_Bot_Install_Error__c.field-meta.xml
<CustomField>
    <fullName>Swarm_Bot_Install_Error__c</fullName>
    <description>Set when TeamsSwarmController.installBotAppBestEffort fails to install the interactive-card bot into a chat swarm (e.g. Teams_Bot_Config__mdt not filled in, or the Named Credential/app catalog upload from README.md section 6 isn't done yet). The chat swarm itself still succeeds either way - this is purely diagnostic. Cleared on the next successful install attempt.</description>
    <label>Swarm Bot Install Error</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>