force-app/main/default/objects/Case/fields/Swarm_Bot_Service_Url__c.field-meta.xml
<CustomField>
    <fullName>Swarm_Bot_Service_Url__c</fullName>
    <description>Bot Framework serviceUrl for this case's swarm chat, captured from the conversationUpdate activity fired when the bot is installed into the chat. Needed to route Connector API calls (posting/refreshing the case card) to the right regional endpoint - see TeamsBotConversationService.</description>
    <label>Swarm Bot Service Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>