force-app/main/default/objects/Case/fields/Swarm_Chat_Delete_Error__c.field-meta.xml
<CustomField>
    <fullName>Swarm_Chat_Delete_Error__c</fullName>
    <description
  >Set when TeamsSwarmChatDeleteQueueable fails to delete the Teams chat after End Chat saved the transcript (most often missing Chat.ManageDeletion.All consent on the MS_Graph app registration). The transcript and the Case reset still succeeded - this only means the chat is still present in Microsoft Teams and needs deleting by hand. Cleared on the next successful delete.</description>
    <label>Swarm Chat Delete Error</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>