force-app/main/default/objects/Case/fields/Swarm_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Swarm_Group_Id__c</fullName>
    <label>Swarm Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>