force-app/main/default/objects/Case/fields/Swarm_Status__c.field-meta.xml
<CustomField>
    <fullName>Swarm_Status__c</fullName>
    <label>Swarm Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provisioning</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>