force-app/main/default/objects/Case/fields/Swarm_Team_Id__c.field-meta.xml
<CustomField>
    <fullName>Swarm_Team_Id__c</fullName>
    <label>Swarm Team Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>