force-app/main/default/objects/Case/fields/Swarm_Team_Url__c.field-meta.xml
<CustomField>
    <fullName>Swarm_Team_Url__c</fullName>
    <label>Swarm Team URL</label>
    <type>Url</type>
</CustomField>