force-app/main/default/objects/Case/fields/Swarm_Type__c.field-meta.xml
<CustomField>
    <fullName>Swarm_Type__c</fullName>
    <label>Swarm Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>