force-app/main/default/objects/Case/recordTypes/Case_Record.recordType-meta.xml
<RecordType>
    <fullName>Case_Record</fullName>
    <active>true</active>
    <businessProcess>Cse</businessProcess>
    <label>Case Record</label>
</RecordType>