force-app/main/default/objects/Case/recordTypes/Interaction_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Interaction_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Cse</businessProcess>
    <label>Interaction Record Type</label>
</RecordType>